# 3DViewer_v2.0

./: LICENSE.txt  README.md  README_RUS.md
src/: 3DViewer.cc  CMakeLists.txt  Doxyfile  Makefile  m.sh  main.cc
src/controller/: facade.cc
src/include/controller/: data.h  facade.h
src/include/model/: 3d_point.h  base_file_reader.h  edge.h  figure.h  file_reader.h  file_reader_base.h  gif.h  normalization.h  open_gl.h  point_3D.h  qt_scene_drawer.h  scene.h  scene_drawer.h  scene_drawer_base.h  scene_object.h  transform_matrix.h  transform_matrix_builder.h  vertex.h
src/include/view/: afinne_data.h  base_widget.h  color_button.h  figure_data.h  function.h  main_window.h  object_data.h  object_scene.h  path_reader.h  scene_data.h  scene_setting.h  scene_view.h  slider.h  style.h
src/model/: 3d_point.cc  edge.cc  figure.cc  file_reader.cc  normalization.cc  open_gl.cc  point_3D.cc  qt_scene_drawer.cc  scene.cc  scene_drawer.cc  transform_matrix.cc  transform_matrix_builder.cc  vertex.cc
src/resource/: resource.qrc
src/tests/: CMakeLists.txt  main_test.cc
src/tests/include/: file_reader_test.h  main.test.h  main_test.h  transform_matrix_test.h
src/tests/modules/: 3d_point_test.cc  edge_test.cc  facade_test.cc  figure_test.cc  file_reader_test.cc  scene_test.cc  transform_matrix_test.cc  vertex_test.cc
src/view/: afinne_data.cc  base_widget.cc  color_button.cc  figure_data.cc  function.cc  main_window.cc  object_data.cc  object_scene.cc  path_reader.cc  scene_data.cc  scene_setting.cc  scene_view.cc  slider.cc  style.cc
